Update DESCRIPTION and package files

--- a/docs/olr_introduction.Rmd
+++ b/docs/olr_introduction.Rmd
@@ -6,22 +6,19 @@ vignette: >
   %\VignetteIndexEntry{Getting Started with olr: Optimal Linear Regression}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
----
 
-```{r load-htmltools, include=FALSE}
-library(htmltools)
-```
+---
 
 
 ```{r html-style, results='asis', echo=FALSE}
-htmltools::tags$style(HTML("
+htmltools::HTML("
 pre code {
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow-x: auto;
   font-size: 90%;
 }
-"))
+")
 ```
 
 
