--- a/vignettes/olr_introduction.Rmd
+++ b/vignettes/olr_introduction.Rmd
@@ -9,15 +9,16 @@ vignette: >
 
 ---
 
-
 ```{r html-style, results='asis', echo=FALSE}
-htmltools::HTML("
+cat("
+<style>
 pre code {
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow-x: auto;
   font-size: 90%;
 }
+</style>
 ")
 ```
 
